# depthai

./: .dockerignore  .gitattributes  .gitignore  .gitmodules  .readthedocs.yaml  .requirements.txt.swp  1099tstrtest.py  Calibration_model_seach.py  DM2080_R0M0E0_oak_d_sr.json  DepthCamera_2023-06-27-14-50-40.json  Dockerfile  IMU flashing.py  LICENSE  OAK-D-PRO.json  README.md  board.json  calibrate.py  calibrate2.py  calibrate_and_test.py  calibrate_and_test.sh  calibrate_ui.py  calibrate_ui_test.py  calibration_client.py  calibration_utils.py  callbacks.py  client_starter.py  cv_test.py  depthai-demo.py  depthai.py  depthai_calib.json  depthai_demo.py  depthai_demo_my_copy.py  depthai_profiler.py  depthai_profiler.sh  depthai_supervisor.py  depthai_supervisor.sh  dm_1092.sh  docker_dependencies.sh  dynamic_recalibration.py  eeprom_test.py  (+68 more)
.github/: CODEOWNERS
Mechanical_Models/: BG0250TG.step  DepthAI_Camera_Module_Mount.step  README.md
autostart/: startupdemo
batch/: oak-d.json  oak_1.json  oak_1_poe.json  oak_d_ffc_4p.json  oak_d_lite.json  oak_d_poe.json  oak_d_pro.json  oak_d_pro_poe.json  oak_d_s2.json  oak_d_s2_poe.json  oak_d_sr.json  oak_d_w_poe.json  oak_ffc_1p.json  oak_ffc_4p.json
consts/: resource_paths.py
depthai_helpers/: age_gender_recognition_handler.py  app_manager.py  arg_manager.py  calibration_utils.py  calibration_utils_old.py  cli_utils.py  config_manager.py  deeplabv3p_person.py  emotion_recognition_handler.py  image_scaler.py  ir_handler.py  landmarks_recognition_handler.py  managers.py  metrics.py  mobilenet_ssd_handler.py  model_downloader.py  oak-d-poe.sh  object_tracker_handler.py  openpose2_handler.py  openpose_handler.py  production_support_server_api.py  projector_3d.py  pygame_checkbox.py  stats_server_api.py  stereoRectify.py  supervisor.py  tensor_utils.py  tiny_yolo_v3_decoder.py  tiny_yolo_v3_handler-yolov3.py  tiny_yolo_v3_handler.py  utils.py  version_check.py
depthai_sdk/: MANIFEST.in  README.md  __init__.py  requirements.txt  setup.py
docker/: Dockerfile  README.md  (+1 more)
(+1348 files in other folders)
